# djangotutorial

./: .gitignore  README.md  pyproject.toml
djangotutorial/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  views.py
polls/management/commands/: closepoll.py
polls/migrations/: 0001_initial.py  0002_question_is_open.py
