[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "djangotutorial"
version = "0.1.0"
description = ""
authors = ["ChenYuan-Lee <leechenyuan.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.8"
django-extensions = "^3.0.0"
django-debug-toolbar = "3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
